--- a/index.html
+++ b/index.html
@@ -3,105 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team Registration</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-        }
-        .form-container {
-            background-color: #fff;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-            max-width: 500px;
-            width: 100%;
-        }
-        .form-container h2 {
-            text-align: center;
-            color: #343a40;
-            margin-bottom: 25px;
-            font-size: 24px;
-            font-weight: bold;
-        }
-        .form-group {
-            margin-bottom: 20px;
-        }
-        .form-group label {
-            display: block;
-            margin-bottom: 5px;
-            color: #495057;
-            font-weight: bold;
-        }
-        .form-group input, .form-group textarea {
-            width: 100%;
-            padding: 12px;
-            border: 1px solid #ced4da;
-            border-radius: 5px;
-            font-size: 16px;
-            color: #495057;
-        }
-        .form-group input:focus, .form-group textarea:focus {
-            border-color: #80bdff;
-            outline: none;
-            box-shadow: 0 0 5px rgba(0, 123, 255, 0.25);
-        }
-        .form-group button {
-            width: 100%;
-            padding: 12px;
-            background-color: #28a745;
-            border: none;
-            border-radius: 5px;
-            color: white;
-            font-size: 18px;
-            font-weight: bold;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-        .form-group button:hover {
-            background-color: #218838;
-        }
-        .form-group button:active {
-            background-color: #1e7e34;
-        }
-        .form-group .form-description {
-            font-size: 14px;
-            color: #6c757d;
-            margin-top: 5px;
-        }
-    </style>
+    <title>Esports Team Registration</title>
 </head>
 <body>
-    <div class="form-container">
-        <h2>Team Registration</h2>
-        <form action="submit_registration.php" method="POST">
-            <div class="form-group">
-                <label for="team_name">Team Name:</label>
-                <input type="text" id="team_name" name="team_name" required>
-            </div>
-            <div class="form-group">
-                <label for="team_leader">Team Leader's Name:</label>
-                <input type="text" id="team_leader" name="team_leader" required>
-            </div>
-            <div class="form-group">
-                <label for="email">Email Address:</label>
-                <input type="email" id="email" name="email" required>
-            </div>
-            <div class="form-group">
-                <label for="team_members">Team Members (Comma Separated):</label>
-                <textarea id="team_members" name="team_members" rows="4" required></textarea>
-                <div class="form-description">Enter the names of your team members, separated by commas.</div>
-            </div>
-            <div class="form-group">
-                <button type="submit">Register Team</button>
-            </div>
-        </form>
-    </div>
+    <h2>Register Your Esports Team</h2>
+    <form action="register.php" method="POST">
+        <label for="teamName">Team Name:</label><br>
+        <input type="text" id="teamName" name="teamName" required><br><br>
+
+        <label for="captainName">Captain's Name:</label><br>
+        <input type="text" id="captainName" name="captainName" required><br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="members">Team Members (separated by commas):</label><br>
+        <textarea id="members" name="members" rows="4" cols="50" required></textarea><br><br>
+
+        <input type="submit" value="Register">
+    </form>
 </body>
 </html>
